--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "python.pythonPath": ".env/bin/python",
-    "files.exclude": {
+    "xfiles.exclude": {
         "**/.env/*/**": true
     }
 }
