--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -16,7 +16,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        #pip install -r requirements.txt
+        pip install -e .[tf,dev,pc,ci]
     - name: Lint with flake8
       run: |
         pip install flake8
