--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -19,7 +19,7 @@ jobs:
         #pip install -r requirements.txt
         pip install -e .[tf,dev,pc,ci]
         pip install Adafruit_MotorHAT
-        pip install keras --upgrade
+        #pip install keras --upgrade
     - name: Lint with flake8
       run: |
         pip install flake8
